--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="contenedor"> 
     <div class="fila">
         <div class="logo">
-            <img src="https://d27i7n2isjbnbi.cloudfront.net/careers/photos/203206/thumb_photo_1612537564.png">
+            <img src="assets/logo_full_color.svg">
     </div>
     <div class="navbar">
             <ul>
@@ -17,6 +17,8 @@
             <h1><strong>Entrevista Técnica</strong> En</h1>
             <h1 style="color:rgb(85, 170, 0)"><strong> Wolox </strong> </h1>
         </div>
+        <div class="vector_!">
+            <img src="assets/Img Hero/Ic_ilustra_Hero.png">
+        </div>
     </div>
-
 </div>
