Segunda seccion, hover effects

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,24 +1,44 @@
 <div class="contenedor"> 
-    <div class="fila">
-        <div class="logo">
-            <img src="assets/logo_full_color.svg">
-    </div>
-    <div class="navbar">
-            <ul>
-                <li>Inicio</li>
-                <li>Beneficios</li>
-                <li class="activo">Login</li>
-            </ul>
-    </div>
-    </div>
-    <div class="fila">
-        <div class="mensaje">
-            <h1>Bienvenido a tu</h1>
-            <h1><strong>Entrevista Técnica</strong> En</h1>
-            <h1 style="color:rgb(85, 170, 0)"><strong> Wolox </strong> </h1>
+    <div class="header">
+        <div class="fila">
+            <div class="logo">
+                <img src="assets/logo_full_color.svg">
         </div>
-        <div class="vector_!">
-            <img src="assets/Img Hero/Ic_ilustra_Hero.png">
+        <div class="navbar">
+                <ul>
+                    <li>Inicio</li>
+                    <li>Beneficios</li>
+                    <li class="activo">Login</li>
+                </ul>
+        </div>
+        </div>
+        <div class="fila">
+            <div class="mensaje">
+                <h1>Bienvenido a tu</h1>
+                <h1><strong>Entrevista Técnica</strong> En</h1>
+                <h1 style="color:#97CF00"><strong> Wolox </strong> </h1>
+            </div>
+            <div class="hero">
+                <img src="assets/Img Hero/Ic_ilustra_Hero.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="fila" style="background-color:  #F2F5FA;">
+        <div class="img_woloxer">
+            <div class="text_woloxer">
+                <h1 style="color: #00A9E5;" ><strong style="color:#97CF00"> 350 + </strong> <strong>Woloxers</strong>  </h1>
+               <p> <img width="25px" src="assets/twitter.svg"/> @Wolox</p> 
+               <button class="activo">Siguenos</button>
+            </div>
+        </div>
+        <div class="seccion_trabajamosJuntos">
+            <h1>Trabajamos para </h1>
+            <h1>
+                <strong  style="color: #00A9E5;" > convertir</strong>
+                <strong style="color:#97CF00"> ideas </strong> 
+                <strong style="font-weight: normal;"> en  </strong></h1> 
+                <h1>productos.</h1>
         </div>
     </div>
 </div>
