--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,7 +1,13 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+@font-face{
+    font-family: 'FiraSans-Medium';
+    src: url("http://localhost:4200/assets/Fonts/Fira_Sans/FiraSans-Medium.ttf");
 }
+
+* {
+    font-family: 'FiraSans-Medium';
+    box-sizing: border-box;
+}
+
 h1{
     margin: 0px;
     font-weight: unset;
@@ -13,6 +19,14 @@ h1{
     display: flex;
     flex-wrap: nowrap;
 }
+
+@media (max-width: 750px) {
+    .fila{
+        display: flex;
+        flex-wrap: wrap;
+    }
+  }
+
 .logo{
     width: 50vw;
     padding-left: 50px;
@@ -28,9 +42,14 @@ h1{
     font-size: 1em;
 }
 
+.navbar ul{
+    flex-direction: column;
+    align-items: start;
+}
+
 .navbar ul li{
-    display: inline-block;
     padding: 10px;
+    display: inline-block;
     justify-content: center;
     list-style: none;
     list-style-type: none;
@@ -38,12 +57,24 @@ h1{
     text-decoration: none;
     font-weight: bold;
     margin-left: 40px;
+    cursor: pointer;
+    transition: 0.5s;
+
 }
+.navbar ul li:hover {
+    color: rgb(94, 100, 100);
+  }
+
+.navbar ul li:nth-child(3):hover {
+    background-color: #031b1d;
+    color: white;
+  }
+ 
 
 .activo{
-    border:1px solid blue;
+    border:1px solid #33ABE1;
     border-radius: 25px 25px 25px 25px;
-    color: blue;
+    color: #2AA7DF;
     text-align: center;
     width: 20%;
 }
@@ -57,3 +88,37 @@ h1{
 .vector_1{
     width: 50vw;
 }
+
+.img_woloxer{
+    width: 50vw;
+    height: 50vh;
+    padding-left: 50px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('http://localhost:4200/assets/img_woloxer.png');
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.text_woloxer {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+
+  .seccion_trabajamosJuntos{
+      width: 50vw;
+      text-align: center;
+      padding: 50px;
+      margin-top: 100px;
+
+  }
+
+  .header{
+    background-image: url('http://localhost:4200/assets/Backgrounds/Bg_Header.png');
+    background-size: contain;
+    background-position: center;
+  }
