--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
     <div class="header">
         <div class="fila">
             <div class="logo">
-                <img src="assets/logo_full_color.svg">
+                <img alt="logo Wolox" src="assets/logo_full_color.svg">
         </div>
         <div class="navbar">
                 <ul>
@@ -19,7 +19,7 @@
                 <h1 style="color:#97CF00"><strong> Wolox </strong> </h1>
             </div>
             <div class="hero">
-                <img src="assets/Img Hero/Ic_ilustra_Hero.png">
+                <img alt="imagen woloxer" src="assets/Img Hero/Ic_ilustra_Hero.png">
             </div>
         </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="img_woloxer">
             <div class="text_woloxer">
                 <h1 style="color: #00A9E5;" ><strong style="color:#97CF00"> 350 + </strong> <strong>Woloxers</strong>  </h1>
-               <p> <img width="25px" src="assets/twitter.svg"/> @Wolox</p> 
+               <p> <img style="padding-top: 5px;" alt="logo twiter" width="25px" src="assets/twitter.svg"/> <strong>@Wolox</strong>  </p> 
                <button class="activo">Siguenos</button>
             </div>
         </div>
@@ -41,4 +41,8 @@
                 <h1>productos.</h1>
         </div>
     </div>
+</div>
+
+<div class="fila" style="text-align: center;">
+       <h3 style="width:100%;font-weight: normal;"> Entre los beneficios que ofrecemos se encuentran <strong  style="color: #00A9E5;font-weight: normal;" > ;)</strong></h3>
 </div>
