--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -4,7 +4,7 @@
 }
 
 * {
-    font-family: 'FiraSans-Medium';
+    font-family: 'FiraSans-Medium',Helvetica, Arial, Verdana, Tahoma, sans-serif;;
     box-sizing: border-box;
 }
 
