ajustes logo twiter

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -28,7 +28,7 @@
         <div class="img_woloxer">
             <div class="text_woloxer">
                 <h1 style="color: #00A9E5;" ><strong style="color:#97CF00"> 350 + </strong> <strong>Woloxers</strong>  </h1>
-               <p> <img style="padding-top: 5px;" alt="logo twiter" width="25px" src="assets/twitter.svg"/> <strong>@Wolox</strong>  </p> 
+               <p> <img style="padding-top: 5px;top:50%;left: 50%;" alt="logo twiter" width="25px" src="assets/twitter.svg"/> <strong>@Wolox</strong>  </p> 
                <button class="activo">Siguenos</button>
             </div>
         </div>
