--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -19,7 +19,7 @@
                 <h1 style="color:#97CF00"><strong> Wolox </strong> </h1>
             </div>
             <div class="hero">
-                <img alt="imagen woloxer" src="assets/Img Hero/Ic_ilustra_Hero.png">
+                <img alt="imagen woloxer" width="100%" src="assets/Img Hero/Ic_ilustra_Hero.png">
             </div>
         </div>
     </div>
@@ -28,8 +28,11 @@
         <div class="img_woloxer">
             <div class="text_woloxer">
                 <h1 style="color: #00A9E5;" ><strong style="color:#97CF00"> 350 + </strong> <strong>Woloxers</strong>  </h1>
-               <p> <img style="padding-top: 5px;top:50%;left: 50%;" alt="logo twiter" width="25px" src="assets/twitter.svg"/> <strong>@Wolox</strong>  </p> 
-               <button class="activo">Siguenos</button>
+               <p style="display: flex;flex-direction: row;justify-content: center;justify-items: center;align-items: center;"> 
+                    <img  alt="logo twiter" width="30rem" src="assets/twitter.svg"/> 
+                   <span>@Wolox</span> 
+                </p> 
+               <button class="activo" style="font-size:1.5em;color:white">Siguenos</button>
             </div>
         </div>
         <div class="seccion_trabajamosJuntos">
