--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="fila" style="background-color:  #F2F5FA;">
+    <div class="fila" style="background-color:  #F2F5FA;top:10px">
         <div class="img_woloxer">
             <div class="text_woloxer">
                 <h1 style="color: #00A9E5;" ><strong style="color:#97CF00"> 350 + </strong> <strong>Woloxers</strong>  </h1>
@@ -32,7 +32,9 @@
                     <img  alt="logo twiter" width="30rem" src="assets/twitter.svg"/> 
                    <span>@Wolox</span> 
                 </p> 
-               <button class="activo" style="font-size:1.5em;color:white">Siguenos</button>
+              <a class="activo" href="http://www.twitter.com/Wolox" target="_blank" style="font-size:1.5em;color:white;padding:5px">
+                Siguenos
+              </a> 
             </div>
         </div>
         <div class="seccion_trabajamosJuntos">
@@ -48,4 +50,52 @@
 
 <div class="fila" style="text-align: center;">
        <h3 style="width:100%;font-weight: normal;"> Entre los beneficios que ofrecemos se encuentran <strong  style="color: #00A9E5;font-weight: normal;" > ;)</strong></h3>
+</div>
+
+<div class="fila beneficios">
+    <div class="card">
+        <img src="../../assets/Ic_Hour.svg"/>
+        <p>Flexibilidad</p>
+        <p>Horaria</p>
+    </div>
+
+    <div class="card">
+        <img src="../../assets/Ic_HomeOffice.svg"/>
+        <p>Home Office</p>
+    </div>
+
+
+    <div class="card">
+        <img src="../../assets/Ic_Workshops.svg"/>
+        <p>Cpacitaciones</p>
+        <p>y WorkShops</p>
+    </div>
+
+
+    
+    <div class="card">
+        <img src="../../assets/Ic_DrinkSnacks.svg"/>
+        <p>Snacks, Frutas</p>
+        <p>y bebidas gratis.</p>
+    </div>
+
+        
+    <div class="card">
+        <img src="../../assets/Ic_laptop.svg"/>
+        <p>Semana</p>
+        <p>Remota</p>
+    </div>
+
+    <div class="card">
+        <img src="../../assets/Ic_brain.svg"/>
+        <p>Trabajar</p>
+        <p>en ultimas</p>
+        <p>tecnologias.</p>
+    </div>
+
+</div>
+
+<div class="fila tamano" style="text-align:text-center">
+    <h1>Gracias Por <strong  style="color: #00A9E5;text-align:text-center" > Completar el ejercicio</strong> </h1>
+    <h3>Te invitamos a ver más información</h3>
 </div>
