--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -39,11 +39,14 @@ h1 {
 
     .img_woloxer {
         width: 100vw !important;
+        height: 50vh !important;
  
     }
 
     .seccion_trabajamosJuntos {
         width: 100vw !important;
+        height: 50vh !important;
+
     }
 }
 
@@ -92,6 +95,12 @@ h1 {
 .navbar ul li:nth-child(3):hover {
     background-color: #031b1d;
     color: white;
+}
+
+
+.beneficios{
+    margin: 5%;
+    justify-content: space-between;
 }
 
 .activo {
@@ -149,4 +158,11 @@ h1 {
     background-image: url("http://localhost:4200/assets/Backgrounds/Bg_Header.png");
     background-size: contain;
     background-position: top ;
+}
+
+
+.tamano{
+    width: 100%;
+    flex-direction: column;
+    align-items: center
 }
