--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="contenedor"> 
     <div class="header">
-        <div class="fila">
+        <div class="fila menu">
             <div class="logo">
                 <img alt="logo Wolox" src="assets/logo_full_color.svg">
         </div>
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-<div class="fila" style="text-align: center;">
+<div class="fila textoBeneficios" style="text-align: center;">
        <h3 style="width:100%;font-weight: normal;"> Entre los beneficios que ofrecemos se encuentran <strong  style="color: #00A9E5;font-weight: normal;" > ;)</strong></h3>
 </div>
 
@@ -95,7 +95,8 @@
 
 </div>
 
-<div class="fila tamano" style="text-align:text-center">
-    <h1>Gracias Por <strong  style="color: #00A9E5;text-align:text-center" > Completar el ejercicio</strong> </h1>
+<div class="fila footer">
+    <h1>Gracias por <strong  style="color: #00A9E5" > completar el ejercicio</strong> </h1>
     <h3>Te invitamos a ver más información</h3>
+    <div class="activo">Conoce más</div>
 </div>
