--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -92,11 +92,14 @@
         <p>en ultimas</p>
         <p>tecnologias.</p>
     </div>
-
 </div>
 
 <div class="fila footer">
     <h1>Gracias por <strong  style="color: #00A9E5" > completar el ejercicio</strong> </h1>
     <h3>Te invitamos a ver más información</h3>
-    <div class="activo">Conoce más</div>
+    <a class="activo" target="_blank" href="https://www.wolox.com.ar/" style="background-color: #00A9E5;color:white;padding:5px;cursor: pointer;">Conocer más</a>
+</div>
+
+<div class="logofooter fila">
+    <img src="../../assets/Ic_Wolox_Footer.svg" />
 </div>
