--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -54,19 +54,19 @@
 
 <div class="fila beneficios">
     <div class="card">
-        <img src="../../assets/Ic_Hour.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_Hour.svg"/>
         <p>Flexibilidad</p>
         <p>Horaria</p>
     </div>
 
     <div class="card">
-        <img src="../../assets/Ic_HomeOffice.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_HomeOffice.svg"/>
         <p>Home Office</p>
     </div>
 
 
     <div class="card">
-        <img src="../../assets/Ic_Workshops.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_Workshops.svg"/>
         <p>Cpacitaciones</p>
         <p>y WorkShops</p>
     </div>
@@ -74,20 +74,20 @@
 
     
     <div class="card">
-        <img src="../../assets/Ic_DrinkSnacks.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_DrinkSnacks.svg"/>
         <p>Snacks, Frutas</p>
         <p>y bebidas gratis.</p>
     </div>
 
         
     <div class="card">
-        <img src="../../assets/Ic_laptop.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_laptop.svg"/>
         <p>Semana</p>
         <p>Remota</p>
     </div>
 
     <div class="card">
-        <img src="../../assets/Ic_brain.svg"/>
+        <img src="https://c0der97.github.io/Wolox/assets/Ic_brain.svg"/>
         <p>Trabajar</p>
         <p>en ultimas</p>
         <p>tecnologias.</p>
@@ -101,5 +101,5 @@
 </div>
 
 <div class="logofooter fila">
-    <img src="../../assets/Ic_Wolox_Footer.svg" />
+    <img src="https://c0der97.github.io/Wolox/assets/Ic_Wolox_Footer.svg" />
 </div>
