--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Montserrat-Regular";
-    src: url("http://localhost:4200/assets/Fonts/Montserrat/Montserrat-Regular.ttf");
+    src: url("https://c0der97.github.io/Wolox/assets/Fonts/Montserrat/Montserrat-Regular.ttf");
 }
 
 * {
@@ -173,7 +173,7 @@ h1 {
     height: 25rem;
     padding-left: 50px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("http://localhost:4200/assets/img_woloxer.png");
+        url("https://c0der97.github.io/Wolox/assets/img_woloxer.png");
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -200,7 +200,7 @@ h1 {
 }
 
 .header {
-    background-image: url("http://localhost:4200/assets/Backgrounds/Bg_Header.png");
+    background-image: url("https://c0der97.github.io/Wolox/assets/Backgrounds/Bg_Header.png");
     background-size: contain;
     background-position: left;
     background-repeat: no-repeat;
@@ -212,7 +212,7 @@ h1 {
 
 .footer{
     margin-top: -129px;
-    background-image: url("http://localhost:4200/assets/Backgrounds/Bg_Footer.png");
+    background-image: url("https://c0der97.github.io/Wolox/assets/Backgrounds/Bg_Footer.png");
     background-size: contain;
     background-position: top;
     width: 100%;
