--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid ">
-  <h1>Ultimas Noticias</h1>
+  <h1>Ultimas Noticias 2022</h1>
   <div class="row">
     <div class="card col-md-3 m-3 mx-auto" *ngFor="let article of news" >
       <img src="{{article.urlToImage}}" class="card-img-top" alt="">
